@@ -4829,6 +4829,7 @@ void dump_fates(FILE *outfile)
 {
 	int i;
 	char buf[120];
+	bool pending = FALSE;
 
 	if (!outfile) return;
 
@@ -4839,6 +4840,11 @@ void dump_fates(FILE *outfile)
 			fate_desc(buf, i);
 			fprintf(outfile, "%s\n", buf);
 		}
+		if ((fates[i].fate) && !(fates[i].know)) pending = TRUE;
+	}
+	if (pending)
+	{
+		fprintf(outfile, "You do not know all of your fate.\n");
 	}
 }
 
