@@ -6,6 +6,8 @@ T.o.M.E 2.3.7 (ah)
 - Fix Lua errors when hitting <ESC> while choosing spell.
 - Killerbunnies: Automatizer: Add patch which adds new <inventory/>
   and <equipment/> rules.
+- Killerbunnies: Add "you do not know all your fate" to Fate menu
+  if you haven't been discovered all your fates.
 
 T.o.M.E 2.3.6 (ah)
 
